add load balancer tests
